--- a/resume.tex
+++ b/resume.tex
@@ -265,7 +265,7 @@ I am a Electrical Engineer with more than six years of experience as a Java Deve
 I consider myself an Object Oriented Programming and Scrum Agile Fan who tries to keep him up-to-date with the new technologies that appear. Continued learning, mainly using the Online Courses you can find in web pages like Coursera or edX, is a must for me and, also by developing my own projects.
 I am looking to expand my experience and being happy to travel to achieve this.
 
-%\input{career.tex}
+\input{career.tex}
 
 %\input{education.tex}
 
@@ -274,14 +274,6 @@ I am looking to expand my experience and being happy to travel to achieve this.
 % \input{skills.tex}
 
 %\input{abilities.tex}
-
-%\section{Anexos}
-%
-%\begin{innerlist}
-   % \item Carta de recomendación de la empresa \href{http://www.laprimera.net/}{\textbf{LaPrimera.net}}
-    %\item Fotocopia del título de Ingeniero Técnico de Telecomunicación
-%\end{innerlist}
-
 
 \end{document}
 
