Updating with ING experience

--- a/career.tex
+++ b/career.tex
@@ -1,12 +1,29 @@
 \section{Career}
 %
-\includegraphics[scale=0.1]{companies/sytac.png} \href{https://www.sytac.op/}{\textbf{Sytac}},
+\includegraphics[scale=0.1]{companies/ing} \href{https://www.ing.nl/}{\textbf{ING B.V.}},
+Amsterdam, Netherlands
+\begin{outerlist}
+        \item[] \textit{Senior Software Developer}%
+        \hfill \textbf{November 2019 - Present}
+
+        \begin{innerlist}
+                \item Helping to perform our goal of Infrastructure As Code using GO as programming language.
+
+                \item Developing/Supporting the Change Package flow for ING Customers.
+                Including FE and BE
+
+        \end{innerlist}
+
+\end{outerlist}
+
+
+\includegraphics[scale=0.1]{companies/sytac} \href{https://www.sytac.op/}{\textbf{Sytac}},
 Haarlem, Netherlands
 \begin{outerlist}
 \item[] \textit{Java Senior Developer} in Sytac%
         \hfill \textbf{July 2019 - Present}
 
-I have worked in clients like Backbbase and KLM.
+I have worked in clients like Backbbase and KLM\@.
 \begin{innerlist}
 \item KLM: Working in a multi-project team on charge of develop the backend and frontend of webapps for internal use. Responsible for the full lifecycle of our projects, from development to deployment.
 
@@ -16,7 +33,7 @@ I have worked in clients like Backbbase and KLM.
 
 \end{outerlist}
 
-\includegraphics[scale=0.1]{companies/bux.jpg} \href{http://www.getbux.com/}{\textbf{BUX}},
+\includegraphics[scale=0.1]{companies/bux} \href{https://www.getbux.com/}{\textbf{BUX}},
 Amsterdam, Netherlands
 \begin{outerlist}
 \item[] \textit{Java Senior Developer} in BUX%
@@ -29,7 +46,7 @@ This service needs integration with several third parties with different APIs an
 \end{innerlist}
 \end{outerlist}
 
-\includegraphics[scale=0.1]{companies/powerhouse.png} \href{http://www.powerhouse.nl/}{\textbf{Powerhouse}},
+\includegraphics[scale=0.1]{companies/powerhouse} \href{https://www.powerhouse.nl/}{\textbf{Powerhouse}},
 Amsterdam, Netherlands
 \begin{outerlist}
 \item[] \textit{Java Innovative Developer} in Inni%
@@ -49,7 +66,7 @@ Working in a tool to be used by the Essent Zakelijke employees for contracting a
 \end{innerlist}
 \end{outerlist}
 
-\includegraphics[scale=0.3]{companies/ericsson2.png} \href{http://www.ericsson.com/}{\textbf{Ericsson}},
+\includegraphics[scale=0.3]{companies/ericsson2.png} \href{https://www.ericsson.com/}{\textbf{Ericsson}},
 Andalusia Technology Park, Malaga
 \begin{outerlist}
 \item[] \textit{Developer}%
@@ -58,14 +75,16 @@ Andalusia Technology Park, Malaga
 Working in the \href{http://www.ericsson.com/ourportfolio/products/son-optimization-manager}{\textbf{SON-OM}} tool:
 \begin{innerlist}
 \item Experience as a Scrum Master.
-\item Design and validation of simulators and real algorithms networks. Develpment of tools for optimization of the mobile multi-technology networks, emphasised in LTE networks.
+\item Design and validation of simulators and real algorithms networks.
+Development of tools for optimization of the mobile multi-technology networks, emphasised in LTE networks.
 \item Design and implementation of algorithms using pure Java as the programming language with a Scrum methodology.
 \item Testing, focused on Unit Testing, using JUnit as the testing framework.
-\item Project for AT\&T in the United States from Oct 2014 to Mar 2015. Focusing in performance (concurrency).
+\item Project for AT\&T in the United States from Oct 2014 to Mar 2015.
+Focusing in performance (concurrency).
 \end{innerlist}
 \end{outerlist}
 
-\includegraphics[scale=0.2]{companies/uma.jpg} \href{http://www.uma.es/}{\textbf{University of Malaga}},
+\includegraphics[scale=0.2]{companies/uma} \href{https://www.uma.es/}{\textbf{University of Malaga}},
 Andalusia Technology Park, Malaga
 \begin{outerlist}
 \item[] \textit{Researcher}%
@@ -79,7 +98,7 @@ Working for Ericsson in:
 \end{innerlist}
 \end{outerlist}
 
-\includegraphics[scale=0.1]{companies/everis.jpg} \href{http://www.everis.es/}{\textbf{Everis}},
+\includegraphics[scale=0.1]{companies/everis} \href{https://www.everis.es/}{\textbf{Everis}},
 Madrid, Madrid
 \begin{outerlist}
 
@@ -93,7 +112,7 @@ Madrid, Madrid
 \end{innerlist}%
 \end{outerlist}
 
-\includegraphics[scale=0.1]{companies/laprimera.jpg} \href{http://www.laprimera.net/}{\textbf{LaPrimera.net}},
+\includegraphics[scale=0.1]{companies/laprimera} \href{https://www.laprimera.net/}{\textbf{LaPrimera.net}},
 Ubeda, Jaen
 \begin{outerlist}
 
