--- a/resume.tex
+++ b/resume.tex
@@ -232,8 +232,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%% Begin CV Document %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
-% \makeheading{Manuel Doncel Martos, 34} % por si se quiere sin foto
-\makeheading{\includegraphics[height=1.3in, width=1.1in]{profile.jpg}{Manuel Doncel Martos, 36}}
+% \makeheading{Manuel Doncel Martos, 37} % por si se quiere sin foto
+\makeheading{\includegraphics[height=1.3in, width=1.1in]{profile.jpg}{Manuel Doncel Martos, 37}}
 
 \section{Contact information}
 %
@@ -246,8 +246,8 @@
 \newlength{\rcollength}\setlength{\rcollength}{3.00 in}%
 %
 \begin{tabular}[t]{@{}p{\textwidth-\rcollength}p{\rcollength}}
-George Gershwinlaan 381 & \textit{Mobile Phone Number:} +31 683 990 836 \\
-1082 MT Amsterdam, North Holland, Netherlands & \textit{e-mail:} \email{manueldoncelmartos@gmail.com}\\
+Zwanebloem 85 & \textit{Mobile Phone Number:} +31 683 990 836 \\
+2408 LT Alphen aan den Rijn, South Holland, Netherlands & \textit{e-mail:} \email{manueldoncelmartos@gmail.com}\\
 \end{tabular}
 
 \section{Social Network}
@@ -261,7 +261,7 @@ George Gershwinlaan 381 & \textit{Mobile Phone Number:} +31 683 990 836 \\
 \end{outerlist}
 
 \section{About me}
-I am a Electrical Engineer with more than six years of experience as a Java Developer.
+I am a Electrical Engineer with more than nine years of experience as a Java Developer.
 I consider myself an Object Oriented Programming and Scrum Agile Fan who tries to keep him up-to-date with the new technologies that appear. Continued learning, mainly using the Online Courses you can find in web pages like Coursera or edX, is a must for me and, also by developing my own projects.
 I am looking to expand my experience and being happy to travel to achieve this.
 
