--- a/career.tex
+++ b/career.tex
@@ -21,7 +21,7 @@ Amsterdam, Netherlands
 Haarlem, Netherlands
 \begin{outerlist}
 \item[] \textit{Java Senior Developer} in Sytac%
-        \hfill \textbf{July 2019 - Present}
+        \hfill \textbf{July 2019 - November 2019}
 
 I have worked in clients like Backbbase and KLM\@.
 \begin{innerlist}
