--- a/resume.tex
+++ b/resume.tex
@@ -233,7 +233,7 @@
 
 \begin{document}
 % \makeheading{Manuel Doncel Martos, 37} % por si se quiere sin foto
-\makeheading{\includegraphics[height=1.3in, width=1.1in]{profile.jpg}{Manuel Doncel Martos, 37}}
+\makeheading{\includegraphics[height=1.3in, width=1.1in]{profile.jpg}{Manuel Doncel Martos, 38}}
 
 \section{Contact information}
 %
@@ -261,9 +261,11 @@ Zwanebloem 85 & \textit{Mobile Phone Number:} +31 683 990 836 \\
 \end{outerlist}
 
 \section{About me}
-I am a Electrical Engineer with more than nine years of experience as a Java Developer.
-I consider myself an Object Oriented Programming and Scrum Agile Fan who tries to keep him up-to-date with the new technologies that appear. Continued learning, mainly using the Online Courses you can find in web pages like Coursera or edX, is a must for me and, also by developing my own projects.
-I am looking to expand my experience and being happy to travel to achieve this.
+I am an Electrical Engineer with over ten years of experience as a Software Engineer. My expertise lies primarily in Java and Spring Boot, though I have recently been expanding my skills with Go.
+
+As a passionate advocate of Object-Oriented Programming and Scrum Agile methodologies, I am committed to staying up-to-date with emerging technologies. I strongly value continuous learning, which I pursue both through professional development and by building my own projects.
+
+I am eager to broaden my experience and am open to traveling to achieve this goal. For a deeper insight into my coding journey, feel free to explore my GitHub profile.
 
 \input{career.tex}
 
