chore: update career.tex

--- a/career.tex
+++ b/career.tex
@@ -7,7 +7,7 @@ Amsterdam, Netherlands
         \hfill \textbf{November 2019 - Present}
 
         \begin{innerlist}
-                \item Helping to perform our goal of Infrastructure As Code using GO as programming language.
+                \item Helping to perform our goal of Infrastructure As Code using \href{https://go.dev/}{Go} as programming language.
 
                 \item Developing/Supporting the Change Package flow for ING Customers.
                 Including FE and BE
