--- a/resume.tex
+++ b/resume.tex
@@ -253,18 +253,18 @@ Zwanebloem 85 & \textit{Mobile Phone Number:} +31 683 990 836 \\
 \section{Social Network}
 %
 \begin{outerlist}
-\item[] \twitter ~ \href{http://www.x.com/manueldoncel}{@manueldoncel}
+%\item[] \twitter ~ \href{http://www.x.com/manueldoncel}{@manueldoncel}
 \item[] \linkedin \href{http://es.linkedin.com/in/manueldoncelmartos/en}{http://es.linkedin.com/in/manueldoncelmartos}
 \item[] GitHub \href{https://github.com/manuelarte}{https://github.com/manuelarte}
 \item[] Stackoverflow: \href{http://stackoverflow.com/users/2613670/manuelarte}{http://stackoverflow.com/users/2613670/manuelarte}
 \end{outerlist}
 
 \section{About me}
-I am an Electrical Engineer with over fifteen years of experience as a Software Engineer. My expertise lies primarily in Java and Spring Boot, though I have recently been working and expanding my skills with Go.
+I am an Electrical Engineer with over fifteen years of experience developing software, currently working as a Tech Lead. My expertise lies primarily in Java and Spring Boot, though I have recently been working and expanding my skills with Go.
 
-As a passionate advocate of Object-Oriented Programming and Scrum Agile methodologies, I am committed to staying up-to-date with emerging technologies. I strongly value continuous learning, which I pursue both through professional development and by building my own projects.
+As a passionate advocate of Object-Oriented Programming and Scrum Agile methodologies, I am committed to staying up-to-date with emerging technologies. I strongly value continuous learning, which I pursue both through professional development, building my own projects or controbuting to open source projects.
 
-I am eager to broaden my experience and am open to traveling to achieve this goal. Feel free to explore my GitHub profile.
+Feel free to explore my GitHub profile.
 
 \input{career.tex}
 
