--- a/career.tex
+++ b/career.tex
@@ -3,12 +3,22 @@
 \includegraphics[scale=0.1]{companies/ing} \href{https://www.ing.nl/}{\textbf{ING B.V.}},
 Amsterdam, Netherlands
 \begin{outerlist}
-        \item[] \textit{Senior Software Developer}%
-        \hfill \textbf{November 2019 - Present}
+        \item[] \textit{Tech Lead}
+        \hfill \textbf{November 2022 - Present}
 
         \begin{innerlist}
                 \item Helping to perform our goal of Infrastructure As Code using \href{https://go.dev/}{Go} as programming language.
+                \item Mentoring a team of junior developers.
+                \item DevSecOps. Blue/Red Security Champion.
 
+        \end{innerlist}
+
+\end{outerlist}
+\begin{outerlist}
+        \item[] \textit{Senior Software Developer}
+        \hfill \textbf{November 2019 - November 2022}
+
+        \begin{innerlist}
                 \item Developing/Supporting the Change Package flow for ING Customers.
                 Including FE and BE
 
